<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">



<!--    <RatingBar-->
<!--        android:id="@+id/movieRating"-->
<!--        style="@style/Widget.AppCompat.RatingBar.Small"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:elevation="4dp"-->
<!--        android:isIndicator="true"-->
<!--        android:numStars="5"-->
<!--        android:progressTint="@color/colorRating"-->
<!--        android:rating="3.5"-->
<!--        android:scaleX="1.5"-->
<!--        android:scaleY="1.5"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/ratingValue"-->
<!--        app:layout_constraintEnd_toEndOf="@id/title"-->
<!--        app:layout_constraintStart_toEndOf="@id/ratingValue"-->
<!--        app:layout_constraintTop_toTopOf="@id/ratingValue" />-->

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:elevation="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageContainer"
        tools:text="Taylor Swift" />

<!--    <TextView-->
<!--        android:id="@+id/ratingValue"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:elevation="4dp"-->
<!--        android:fontFamily="@font/rubik_one"-->
<!--        android:letterSpacing="-0.1"-->
<!--        android:textColor="?colorOnPrimary"-->
<!--        android:textSize="36sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="@id/posterContainer"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/title"-->
<!--        tools:text="4.2" />-->

    <TextView
        android:id="@+id/descriptionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:text="@string/header_description"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:maxLines="18"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/descriptionHeader"
        tools:text="Birds of Prey (and the Fantabulous Emancipation of One Harley Quinn)[a] is a 2020 American superhero film based on the DC Comics team Birds of Prey. Distributed by Warner Bros. Pictures, it is the eighth installment in the DC Extended Universe and a follow-up to Suicide Squad (2016). It was directed by Cathy Yan and written by Christina Hodson, and it stars Margot Robbie, Mary Elizabeth Winstead, Jurnee Smollett-Bell, Rosie Perez, Chris Messina, Ella Jay Basco, Ali Wong, and Ewan McGregor. The film follows Harley Quinn as she joins forces with Helena Bertinelli, Dinah Lance, and Renee Montoya to save Cassandra Cain from Gotham City crime lord Black Mask. Robbie, who also served as producer, pitched the idea for Birds of Prey to Warner Bros. in 2015. The film was announced in May 2016, with Hodson being hired to write the script that November, followed by Yan signing on to direct in April 2018. The majority of the cast and crew were confirmed by December 2018. Principal photography lasted from January to April 2019 in Downtown Los Angeles, parts of the Arts District, Los Angeles, and soundstages at Warner Bros. Studios in Burbank, California. Additional filming took place in September 2019. Birds of Prey is the first DCEU film and the second DC Films production to be rated R by the Motion Picture Association of America. The film had its world premiere in Mexico City on January 25, 2020, and was theatrically released in the United States in IMAX, Dolby Cinema, and 4DX on February 7, 2020." />

    <TextView
        android:id="@+id/performerHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:text="@string/performers"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/performersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:elevation="4dp"
        android:minHeight="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/performerHeader" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintVertical_bias="0.578" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageContainer"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_marginTop="142dp"
        android:elevation="12dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <ImageView
          android:id="@+id/image"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="fitXY" />
    </com.google.android.material.card.MaterialCardView>


<!--    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton-->
<!--        android:id="@+id/addToFavorites"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="46dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:elevation="4dp"-->
<!--        android:letterSpacing="0"-->
<!--        android:text="@string/add_to_favorites"-->
<!--        android:textAllCaps="false"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/performersList" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share_24"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
