<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_details_scene">

<androidx.core.widget.NestedScrollView
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toBottomOf="@id/title">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/backdrop"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/image_of_event"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RatingBar
            android:id="@+id/venueRating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="@color/colorRating"
            android:rating="3.5"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="@id/ratingValue"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toEndOf="@id/ratingValue"
            app:layout_constraintTop_toTopOf="@id/ratingValue" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:elevation="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/chivo_bold"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageContainer"
            tools:text="Taylor Swift" />

        <TextView
            android:id="@+id/ratingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="4dp"
            android:fontFamily="@font/rubik_one"
            android:letterSpacing="-0.1"
            android:textColor="@color/primaryTextColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imageContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="2.2" />

        <TextView
            android:id="@+id/event_taxonomies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:elevation="4dp"
            android:ellipsize="end"
            android:gravity="center|center_horizontal|center_vertical"
            android:letterSpacing="-0.1"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ratingValue"
            app:layout_constraintTop_toBottomOf="@id/venueRating"
            tools:text="sports" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/half_default_margin"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/event_taxonomies" />

        <TextView
            android:id="@+id/venueInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:elevation="4dp"
            android:fontFamily="@font/chivo_bold"
            android:text="@string/about"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/venueNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:elevation="4dp"
            android:paddingTop="8dp"
            android:src="@drawable/location_pin"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/venueInfo"
            android:contentDescription="@string/image_of_event" />

        <TextView
            android:id="@+id/venueName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            app:layout_constraintBottom_toBottomOf="@id/venueNameLabel"
            app:layout_constraintStart_toEndOf="@id/venueNameLabel"
            app:layout_constraintTop_toTopOf="@id/venueNameLabel"
            tools:text="Madison Square Garden" />

        <TextView
            android:id="@+id/venueAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/venueName"
            app:layout_constraintStart_toStartOf="@id/venueName"
            android:layout_gravity="top"
            android:textSize="12sp"
            android:layout_marginTop="2dp"
            tools:text="501 Marlins Way Miami, FL 33125" />

        <TextView
            android:id="@+id/venueState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/venueAddress"
            app:layout_constraintStart_toStartOf="@id/venueAddress"
            android:layout_marginTop="2dp"
            android:gravity="top"
            tools:text="New York" />

        <ImageView
            android:id="@+id/venueCapacityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:elevation="4dp"
            android:src="@drawable/capacity_chair"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/venueState"
            android:contentDescription="@string/image_of_event" />

        <TextView
            android:id="@+id/venueCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/venueCapacityLabel"
            app:layout_constraintStart_toEndOf="@id/venueCapacityLabel"
            app:layout_constraintStart_toStartOf="@id/venueState"
            app:layout_constraintTop_toTopOf="@id/venueCapacityLabel"
            tools:text="20000" />

        <ImageView
            android:id="@+id/ticketLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:elevation="4dp"
            android:textAlignment="viewStart"
            android:src="@drawable/ticket_price"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/venueCapacity"
            android:contentDescription="@string/image_of_event" />

        <TextView
            android:id="@+id/ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@id/ticketLabel"
            app:layout_constraintStart_toEndOf="@id/ticketLabel"
            app:layout_constraintStart_toStartOf="@id/venueCapacity"
            app:layout_constraintTop_toTopOf="@id/ticketLabel"
            tools:text="20-100"/>

        <ImageView
            android:id="@+id/datetimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:elevation="4dp"
            android:textAlignment="viewStart"
            android:src="@drawable/baseline_calendar_today_24"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ticket"
            android:contentDescription="@string/image_of_event" />

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/datetimeLabel"
            app:layout_constraintStart_toEndOf="@+id/datetimeLabel"
            app:layout_constraintStart_toStartOf="@id/ticket"
            app:layout_constraintTop_toTopOf="@id/datetimeLabel"
            tools:text="2023-01-31 20:00"/>


        <View
            android:id="@+id/divider_"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/half_default_margin"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/datetimeLabel" />


        <TextView
            android:id="@+id/performerHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:elevation="4dp"
            android:text="@string/performer"
            android:textColor="@android:color/background_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/performersList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:elevation="4dp"
            android:minHeight="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/performerHeader" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintVertical_bias="0.578" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/imageContainer"
            android:layout_width="150dp"
            android:layout_height="210dp"
            android:layout_marginTop="142dp"
            android:elevation="12dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:contentDescription="@string/image_of_event" />
        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/share"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/ic_share_24"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_loop="true" />
</androidx.constraintlayout.motion.widget.MotionLayout>


